# ChangeLog for net-analyzer/httping
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/httping/ChangeLog,v 1.89 2012/12/10 13:14:46 jer Exp $

*httping-1.5.6 (10 Dec 2012)

  10 Dec 2012; Jeroen Roovers <jer@gentoo.org> +httping-1.5.6.ebuild,
  +files/httping-1.5.6-help.patch:
  Version bump.

  19 Nov 2012; Agostino Sarubbo <ago@gentoo.org> httping-1.5.5.ebuild:
  Stable for x86, wrt bug #439390

*httping-1.5.5-r1 (19 Nov 2012)

  19 Nov 2012; Jeroen Roovers <jer@gentoo.org> +httping-1.5.5-r1.ebuild,
  +files/httping-1.5.5-help.patch:
  Fix --help segmentation fault by Behzat (bug #439390 comment #11).

  04 Nov 2012; Agostino Sarubbo <ago@gentoo.org> httping-1.5.5.ebuild:
  Stable for amd64, wrt bug #439390

  29 Oct 2012; Jeroen Roovers <jer@gentoo.org> -httping-1.5.4.ebuild,
  httping-1.5.5.ebuild:
  Stable for HPPA (bug #439390).

  28 Oct 2012; Anthony G. Basile <blueness@gentoo.org> httping-1.5.5.ebuild:
  stable ppc64, bug #439390

  27 Oct 2012; Anthony G. Basile <blueness@gentoo.org> httping-1.5.4.ebuild:
  stable ppc64, bug #439390

*httping-1.5.5 (23 Oct 2012)

  23 Oct 2012; Jeroen Roovers <jer@gentoo.org> -httping-1.5.2.ebuild,
  +httping-1.5.5.ebuild:
  Version bump.

*httping-1.5.4 (07 Sep 2012)

  07 Sep 2012; Tim Harder <radhermit@gentoo.org> +httping-1.5.4.ebuild:
  Version bump. Respect CFLAGS and simplify compile options with usex.

  14 Jun 2012; Jeff Horelick <jdhore@gentoo.org> httping-1.5.3.ebuild:
  marked x86 per bug 419217

  07 Jun 2012; Jeroen Roovers <jer@gentoo.org> httping-1.5.3.ebuild:
  Stable for HPPA (bug #419217).

  05 Jun 2012; Brent Baude <ranger@gentoo.org> httping-1.5.3.ebuild:
  Marking httping-1.5.3 ppc64 for bug 419217

  04 Jun 2012; Agostino Sarubbo <ago@gentoo.org> httping-1.5.3.ebuild:
  Stable for amd64, wrt bug #419217

*httping-1.5.3 (03 May 2012)

  03 May 2012; Jeroen Roovers <jer@gentoo.org> +httping-1.5.3.ebuild:
  Version bump.
