@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install prepare
+DEPEND=>=sys-libs/ncurses-5 ssl? ( dev-libs/openssl )
+DESCRIPTION=http protocol ping-like program
+EAPI=5
+HOMEPAGE=http://www.vanheusden.com/httping/
+IUSE=debug ssl
+KEYWORDS=~amd64 ~hppa ~mips ~ppc ~ppc64 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=sys-libs/ncurses-5 ssl? ( dev-libs/openssl )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://www.vanheusden.com/httping/httping-1.5.7.tgz
+_eclasses_=eutils	d40dc948067bd3db1c8ebf7d51897313	flag-o-matic	61ad55e732e494378165e7dcd4744b91	multilib	9aa8a023e062fca0ba79362d9d0cc488	toolchain-funcs	69a2016af67775a812f4c03ba4b0e03e	user	d0a4d0735a6c0183d707ca919bd72f28
+_md5_=81f1b622759658484df2f5dc991e6b5f
