@@ -6,16 +6,22 @@ AUX httping-1.5.6-help.patch 269 SHA256 e5c54049e818ceabb80157bdb96bdef9ad13c5ea
 DIST httping-1.5.3.tgz 15363 SHA256 b03f7ae129c09e646cb9c7e46eaebf3ce12f28514614637c26b06b34c5d61a93 SHA512 4d6fb5624d41f792358b8ed015a64ee956e7d34aa909589e8eccccdc108e41feccb9276f823aa6ee5793fe9735652adba400000c5c3625122d5812b110fff96b WHIRLPOOL 3e32abec0aa3e2841967ee77d1fe876eb59a20bdae9b74138bc79173514eec4e7027131aa27b936834d3267ef1c282dc424c38cd17fb22aabec3acb0f1e3a31a
 DIST httping-1.5.5.tgz 15828 SHA256 113aa78fb2398d2be2e09fc8bf19fbaff1c0f854d5858a67fcdce6dccdb4dbb8 SHA512 028d7e07ab3efe82e48325595820158f55639da8358dad5fc8ffec75b365d1b520f069055fc0aa0e75177778c445769edf10cf8de011355a1a0086502f522e38 WHIRLPOOL b6d7518bacd3469abddf4425a1f17f2db300195373e7b0f5ff264f1eb3a2dc4b19fb4b79d3278f79a4d9128099915ab4e3b39f9d1fcc8e5277113b7472d5c208
 DIST httping-1.5.6.tgz 16335 SHA256 97932df03b942e2edbaad747a7df1517a5f25434cceb563a8055e713f09a36d7 SHA512 4c407a70e84d22a077d01109fcc480c931d3f30113539b21f9db8816aa0a7f587d73bf60d808f238b04099b0571165313f4b40eb34597ce247bbb1a4a01ab8a7 WHIRLPOOL 7777cfad461d4d418eb03798351f6f8f5d10809c252ecab95d32eb4eb44d117ca4be76e24148e50d92283d755b0986ea166dd8fe922921b7d1d43a0b1cd1417a
+DIST httping-1.5.7.tgz 16295 SHA256 b0d3d3e9708b7395b0c47c1c1cfdd17613e631360eaffd1c43edc599911e7411 SHA512 5e91c5fa1a8a7d90b32867ee545a64e3da45b19e37f6c53f26412571614206e48e75306e24961e69071d733dce9c9b80dd3addc2da768ef337af9a34b3f1999b WHIRLPOOL a305d3bd8579075388695c07ecfd49a0fd84e17ce816ddd9d46729e8a17db9fc963213ff6e74439aebcfa9c5d099165f067f86c10ecac1d92fa047be82f3c279
 EBUILD httping-1.5.3.ebuild 798 SHA256 bf3278a6d82c8bee8dd373b38f50dfb82f0b0fa48decfdbdd6aca5fac05cc2ae SHA512 0f6df3fc3df8a031072cf3af5f31ecffe40399ddc2544b4b82def8ea4fe0b20704e21b129b1c31a483b082b453e4c7c85e0463b96a2743c00e2f2f9b8d271a20 WHIRLPOOL ccb8d6e97bb2223349c81f1bdf126e4143be1543c161a44647a6d0ec73424c257779bd555fc3b8a8b0b316df545bc32db5e4446a5136a8dfed529274a74f7060
 EBUILD httping-1.5.5-r1.ebuild 999 SHA256 62af2060d5ed46716bf9bfa5aeb0d16c5ba7cae74ee432aac6c18a3f53434b84 SHA512 87b356fce4ab0dc9acd619f63c6d72f75a23af95e99bd2811cd17ae16c4b11e146550f96f14f27b75e536b7c893f85b805b900e040c571e0d91ac9ff33b4a8aa WHIRLPOOL 6fe8d96da89615a3468207ef1a0bd218b0ded0753db6b4808dca4107899b30fd7cd3e6f02fd000452d0344b12eee57fb964e802eb581cd338b8fa6cee71e4c7a
 EBUILD httping-1.5.5.ebuild 947 SHA256 e3163bf08a8f9a962084cb383b0b22a4ca9b1f4043dd5bc68a439bb23e2eb026 SHA512 709e41ecd85749c6dbf0e5bb9b34e11ff3d49c4adf741a421be8b61391c8fa250a7b19f8075bdb24150e2765738ac519dd88b75f465b262d18b2571cc7b0ba7f WHIRLPOOL 799086b3b503addc508c1b4507164f9019e99d9ec62289920d4f2f83b53a124ef1e9669d9858cd13b89a2aa0660602c18f6beac952092a565dea56cd8487d256
 EBUILD httping-1.5.6.ebuild 996 SHA256 5bfdc18a868e0ecfada7a8ac5553e3186f3325462b719addcad28a51d3cdaba3 SHA512 33add81a2467f16509adecec2d9174de9fd4eb3f13a4f61cafdc97fa1ec8d49e9a50f8c7b101a45d15d936b317d96927f2251e00d03907fce9322c60e2682186 WHIRLPOOL d11d3ea13ff81826ed62206152c4cc6a9e613458bd85c54b00e5315d8ef5b7ee6a5fa950197d5a54e7b7fac8d11265fec0d5fc256e8ad1c21f5e90a3f287b716
-MISC ChangeLog 11123 SHA256 b396fd4310353c62bec5df4dfdca1f39758ef2e1ad3f3c98fbe0dfbe96fb2982 SHA512 2a160bc07fad7fb187becba889f34f42c96c2c42fc341240f1b842d43b2d4034d8baa7809a113514f0dfb8dd57bf274d2735da9ae509ce6c5fef1830d93fa4ab WHIRLPOOL 08c92e7cff46a32fef3d95ebc737447eef7d79877ae00ed017f6f828262e6b2d363942661042a665b39f47c162fc479b8a7977689e741bc94a3d9fcc192f5328
+EBUILD httping-1.5.7.ebuild 950 SHA256 dbed73866d7c07538f0c39733209ec35459ea57db0bd40259666fcbbefc53d59 SHA512 e9a3ce44cae85bc659fed960727a1a79af4fd2dad5028e3a98d356d715b60f14845256afc6749aab4136a7b896f0a57574688f8507b6e931f97e06794be12239 WHIRLPOOL 26d67ab2fcd5bbe585ba5b4edb390f08bff1dcfefef9e177bd2a9a6b42fb0053d5f5c7245f3cc7b7a270ab2cc32cb4b3773aef8517edbf9471adae7a14657d8d
+MISC ChangeLog 11248 SHA256 0858bd1dccf86292ea60ddcf676088a2aefb869efdf6b9a7d7a8ad8f0774cf75 SHA512 f3284cb42b8624564ca1cbd3e2fdc42c89901ba504603b110ed7cd81569ab6970af3acba5758f680a18502c95bda9d7b7b4a99e2b3ee0605b15c9a814a47429f WHIRLPOOL c6740dec9538ce46d3d618f6bec77e44ea548fa30bfb6356ae3050c55de50f6c217269caf4494962f0b1743113dc91ba060a7b558626af047006e5ce32dbe316
 MISC metadata.xml 159 SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6 SHA512 2c104d2a804da0a38770b6f1ec26cd5b0a49e30392177d5794734a3f4129e82fd0971e5a8a1e48913bfaf1bab57e7bac1fe5ce4f5c618ce057aa5aaf9e59113b WHIRLPOOL 044dec64f8899582332d7fbd7612d2a7c5c7234c44bb9fc51a56f7d6400cd3066a154c3c49dd3f4b468f11e029aa24ff0097ab1387b9f322d57f1d9876afd601
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDF4EgACgkQVWmRsqeSphMaAgCfakYjg9NfdLyphG1RFwOqsHW6
-rq0An2HzsCEhCmdxPkCLxSamYDfjW1ZR
-=oSrx
+iQEcBAEBCAAGBQJQ8MSvAAoJEEqz6FtPBkyj6/4H/2EdcI6vbXv1wK+Gj62lZmWf
+LRHI7TE5anHGNiNixiQl8rAXYj/D0N+M34RzaF6xpnE4R0gx1ACK8qFSLptlcODt
+LSiW0AtqwvCBoxaW+Gj8/HRlco863c3byZNysBrobONVbe/QUxYDJPbUYD6vBWsl
+BcVcYn2XwMJESe6fOSUCI0bykEocWwqMORPpUlJHIwRCHBS8DAoN0XANPEPk+tI3
+5rbdJ5g1jNRLNXsf8Cqp7EerzyKgYbVSmULLrgP8qZkyV4AwPGoTqQz9x6Q3q75j
+cRNQs1lrwlYAptaKDhmQ2rsd6H9RZ5nQUwOwHFWaLFFJx0/GuQ+4DDW49rS7BV4=
+=WELw
 -----END PGP SIGNATURE-----
